--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,8 +6,14 @@
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
+    <Button
+        android:id="@+id/btnIdCapture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="capture"/>
 
 </LinearLayout>
