--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -10,10 +10,21 @@
         android:layout_weight="1"
         android:layout_centerInParent="true"
         android:visibility="visible"/>
-    <Button
-        android:id="@+id/btnIdCapture"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="capture"/>
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btnIdCapture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="capture"/>
+        <com.twitter.sdk.android.core.identity.TwitterLoginButton
+            android:id="@+id/twitter_login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+    </LinearLayout>
+
 
 </LinearLayout>
